Внёс правки согл. проверки дз
1. Объединил секции на странице "Портфолио"
2. Скрыл заголовок на главной странице для секции Особливості

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,9 +43,9 @@
       </ul>
     </header>
     <main>
-      <section class="filter">
-        <h1 class="section-title">Фільтр</h1>
-        <ul>
+      <section>
+        <h1 class="section-title">Портфоліо</h1>
+        <ul class="filter">
           <li>
             <button type="button" class="filter-button pointer">Усі</button>
           </li>
@@ -66,10 +66,7 @@
             </button>
           </li>
         </ul>
-      </section>
-      <section class="portfolio">
-        <h1 class="section-title">Портфоліо</h1>
-        <ul>
+        <ul class="portfolio">
           <li>
             <a href="#" lang="en" class="link">
               <img
