--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </section>
       <section class="section">
         <!-- Вказую заголовок але в завданні на макеті він відсутній, вподальшому його потрібно сховати від користувача -->
-        <h2 class="section-title">Особливості</h2>
+        <h2 class="section-title" style="visibility: hidden">Особливості</h2>
         <ul class="features">
           <li>
             <h3 class="features-title">Увага до деталей</h3>
