--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     /> -->
-    <title>Студія</title>
+    <title>Studio</title>
     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body class="page">
@@ -26,9 +26,9 @@
           >Web<span class="logo-black">Studio</span></a
         >
         <ul class="site-nav list">
-          <li><a href="index.html" class="link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="#" class="link">Контакти</a></li>
+          <li><a href="index.html" class="link current">Studio</a></li>
+          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li><a href="#" class="link">Contacts</a></li>
         </ul>
       </nav>
       <ul class="contacts-nav list">
@@ -38,74 +38,73 @@
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a>
+          <a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
     <main>
       <!-- Герой -->
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="hero-button pointer">
-          Замовити послугу
-        </button>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button pointer">Order Service</button>
       </section>
       <section class="section">
         <!-- Вказую заголовок але в завданні на макеті він відсутній, вподальшому його потрібно сховати від користувача -->
-        <h2 class="section-title" style="visibility: hidden">Особливості</h2>
+        <h2 class="section-title" style="visibility: hidden">Features</h2>
         <ul class="features">
           <li>
-            <h3 class="features-title">Увага до деталей</h3>
+            <h3 class="features-title">Strategy</h3>
             <p class="feature-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="features-title">Пунктуальність</h3>
+            <h3 class="features-title">Punctuality</h3>
             <p class="feature-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="features-title">Планування</h3>
+            <h3 class="features-title">Diligence</h3>
             <p class="feature-text">
-              Так само консультація з широким активом значною мірою зумовлює.
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="features-title">Сучасні технології</h3>
+            <h3 class="features-title">Technologies</h3>
             <p class="feature-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
       <section class="section">
-        <h2 class="section-title">Чим ми займаємося</h2>
+        <h2 class="section-title">What are we doing</h2>
         <ul class="services">
           <li>
             <img
-              src="./images/leptop.jpg"
-              alt="Компьютер"
+              src="./images1/computer.jpg"
+              alt="computer"
               width="370"
               height="294"
             />
           </li>
           <li>
             <img
-              src="./images/phone.jpg"
-              alt="Смартфон"
+              src="./images1/messengers.jpg"
+              alt="messengers"
               width="370"
               height="294"
             />
           </li>
           <li>
             <img
-              src="./images/tablet.jpg"
-              alt="Планшет"
+              src="./images1/smartphone.jpg"
+              alt="smartphone"
               width="370"
               height="294"
             />
@@ -113,46 +112,41 @@
         </ul>
       </section>
       <section class="section team-background">
-        <h2 class="section-title">Наша команда</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul class="team">
           <li>
             <img
-              src="./images/demyanenko.jpg"
-              alt="demyanenko"
+              src="./images1/guerrero.jpg"
+              alt="guerrero"
               width="270"
               height="260"
             />
-            <h3 class="team-title">Ігор Дем'яненко</h3>
+            <h3 class="team-title">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
           <li>
-            <img
-              src="./images/repina.jpg"
-              alt="repina"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-title">Ольга Рєпіна</h3>
+            <img src="./images1/ford.jpg" alt="ford" width="270" height="260" />
+            <h3 class="team-title">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/tarasov.jpg"
-              alt="tarasov"
+              src="./images1/garcia.jpg"
+              alt="garcia"
               width="270"
               height="260"
             />
-            <h3 class="team-title">Микола Тарасов</h3>
+            <h3 class="team-title">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/yermakov.jpg"
-              alt="yermakov"
+              src="./images1/wilson.jpg"
+              alt="wilson"
               width="270"
               height="260"
             />
-            <h3 class="team-title">Михайло Єрмаков</h3>
+            <h3 class="team-title">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
           </li>
         </ul>
@@ -164,27 +158,10 @@
       <a href="index.html" class="logo"
         >Web<span class="logo-white">Studio</span>
       </a>
-      <address>
-        <ul>
-          <li>
-            <a
-              href="https://goo.gl/maps/s2ZkKpDz2wSU5zVp6"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="address"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" lang="en" class="contacts"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
     <script src="./JS/code.js"></script>
   </body>
