--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     /> -->
-    <title>Портфоліо</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body class="page">
@@ -26,9 +26,9 @@
           >Web<span class="logo-black">Studio</span></a
         >
         <ul class="site-nav list">
-          <li><a href="index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-          <li><a href="#" class="link">Контакти</a></li>
+          <li><a href="index.html" class="link current">Studio</a></li>
+          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li><a href="#" class="link">Contacts</a></li>
         </ul>
       </nav>
       <ul class="contacts-nav list">
@@ -38,31 +38,31 @@
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a>
+          <a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
     <main>
       <section>
-        <h1 class="section-title">Портфоліо</h1>
+        <h1 class="section-title">Portfolio</h1>
         <ul class="filter">
           <li>
-            <button type="button" class="filter-button pointer">Усі</button>
+            <button type="button" class="filter-button pointer">All</button>
           </li>
           <li>
             <button type="button" class="filter-button pointer">
-              Веб-сайти
+              Web Site
             </button>
           </li>
           <li>
-            <button type="button" class="filter-button pointer">Додатки</button>
+            <button type="button" class="filter-button pointer">App</button>
           </li>
           <li>
-            <button type="button" class="filter-button pointer">Дизайн</button>
+            <button type="button" class="filter-button pointer">Design</button>
           </li>
           <li>
             <button type="button" class="filter-button pointer">
-              Маркетинг
+              Marketing
             </button>
           </li>
         </ul>
@@ -70,109 +70,109 @@
           <li>
             <a href="#" lang="en" class="link">
               <img
-                src="./images/page-2/techno.jpg"
-                alt="techno"
+                src="./images1/banking.jpg"
+                alt="banking"
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-text">Веб-сайт</p>
+              <h2 class="portfolio-title">Banking App Interface Concept</h2>
+              <p class="portfolio-text">App</p>
             </a>
           </li>
           <li>
             <a href="#" lang="en" class="link">
               <img
-                src="./images/page-2/stars.jpg"
-                alt="stars"
+                src="./images1/cashless.jpg"
+                alt="cashless"
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-text">Дизайн</p>
+              <h2 class="portfolio-title">Cashless Payment</h2>
+              <p class="portfolio-text">Marketing</p>
             </a>
           </li>
           <li>
             <a href="#" lang="en" class="link">
               <img
-                src="./images/page-2/seafood.jpg"
-                alt="seafood"
+                src="./images1/meditaion.jpg"
+                alt="meditaion"
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-text">Додаток</p>
+              <h2 class="portfolio-title">Meditaion App</h2>
+              <p class="portfolio-text">App</p>
             </a>
           </li>
           <li>
             <a href="#" lang="en" class="link">
               <img
-                src="./images/page-2/prime.jpg"
-                alt="prime"
+                src="./images1/taxi.jpg"
+                alt="taxi"
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Проєкт Prime</h2>
-              <p class="portfolio-text">Маркетинг</p>
+              <h2 class="portfolio-title">Taxi Service</h2>
+              <p class="portfolio-text">Marketing</p>
             </a>
           </li>
           <li>
             <a href="#" lang="en" class="link">
               <img
-                src="./images/page-2/boxes.jpg"
-                alt="boxes"
+                src="./images1/screen.jpg"
+                alt="screen"
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Проєкт Boxes</h2>
-              <p class="portfolio-text">Додаток</p>
+              <h2 class="portfolio-title">Screen Illustrations</h2>
+              <p class="portfolio-text">Design</p>
             </a>
           </li>
           <li>
             <a href="#" lang="en" class="link">
               <img
-                src="./images/page-2/borders.jpg"
-                alt="borders"
+                src="./images1/courses.jpg"
+                alt="courses"
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="portfolio-text">Веб-сайт</p>
+              <h2 class="portfolio-title">Online Courses</h2>
+              <p class="portfolio-text">Marketing</p>
             </a>
           </li>
           <li>
             <a href="#" lang="en" class="link">
               <img
-                src="./images/page-2/limited.jpg"
-                alt="limited"
+                src="./images1/stories.jpg"
+                alt="stories"
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Видання Limited Edition</h2>
-              <p class="portfolio-text">Дизайн</p>
+              <h2 class="portfolio-title">Instagram Stories Concept</h2>
+              <p class="portfolio-text">Design</p>
             </a>
           </li>
           <li>
             <a href="#" lang="en" class="link">
               <img
-                src="./images/page-2/lab.jpg"
-                alt="lab"
+                src="./images1/food.jpg"
+                alt="food"
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Проєкт LAB</h2>
-              <p class="portfolio-text">Маркетинг</p>
+              <h2 class="portfolio-title">Organic Food</h2>
+              <p class="portfolio-text">Web Site</p>
             </a>
           </li>
           <li>
             <a href="#" lang="en" class="link">
               <img
-                src="./images/page-2/business.jpg"
-                alt="business"
+                src="./images1/coffee.jpg"
+                alt="coffee"
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-text">Додаток</p>
+              <h2 class="portfolio-title">Fresh Coffee</h2>
+              <p class="portfolio-text">Web Site</p>
             </a>
           </li>
         </ul>
@@ -184,27 +184,10 @@
       <a href="index.html" class="logo"
         >Web<span class="logo-white">Studio</span>
       </a>
-      <address>
-        <ul>
-          <li>
-            <a
-              href="https://goo.gl/maps/s2ZkKpDz2wSU5zVp6"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="address"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" lang="en" class="contacts"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
