--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <!-- <a href="index.html">
           <img src="./images/WebStudio.svg" alt="Лого вебстудии" />
         </a> -->
-        <a href="index.html" class="logo"
-          >Web<span class="logo-black">Studio</span></a
+        <a href="index.html" class="logo-top"
+          >Web<span class="logo-header">Studio</span></a
         >
         <ul class="site-nav list">
           <li><a href="index.html" class="link current">Studio</a></li>
@@ -53,29 +53,29 @@
         <h2 class="section-title" style="visibility: hidden">Features</h2>
         <ul class="features">
           <li>
-            <h3 class="features-title">Strategy</h3>
-            <p class="feature-text">
+            <h3 class="content-title">Strategy</h3>
+            <p class="section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="features-title">Punctuality</h3>
-            <p class="feature-text">
+            <h3 class="content-title">Punctuality</h3>
+            <p class="section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="features-title">Diligence</h3>
-            <p class="feature-text">
+            <h3 class="content-title">Diligence</h3>
+            <p class="section-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="features-title">Technologies</h3>
-            <p class="feature-text">
+            <h3 class="content-title">Technologies</h3>
+            <p class="section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -121,13 +121,13 @@
               width="270"
               height="260"
             />
-            <h3 class="team-title">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
+            <h3 class="content-title">Mark Guerrero</h3>
+            <p class="section-text">Product Designer</p>
           </li>
           <li>
             <img src="./images1/ford.jpg" alt="ford" width="270" height="260" />
-            <h3 class="team-title">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
+            <h3 class="content-title">Tom Ford</h3>
+            <p class="section-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -136,8 +136,8 @@
               width="270"
               height="260"
             />
-            <h3 class="team-title">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
+            <h3 class="content-title">Camila Garcia</h3>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img
@@ -146,8 +146,8 @@
               width="270"
               height="260"
             />
-            <h3 class="team-title">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
+            <h3 class="content-title">Daniel Wilson</h3>
+            <p class="section-text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -155,10 +155,10 @@
     <!-- Футер -->
     <footer class="footer">
       <!-- <img src="./images/WebStudio.svg" alt="Лого вебстудии" /> -->
-      <a href="index.html" class="logo"
-        >Web<span class="logo-white">Studio</span>
+      <a href="index.html" class="logo-bottom"
+        >Web<span class="logo-footer">Studio</span>
       </a>
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
