--- a/portfolio.html
+++ b/portfolio.html
@@ -22,12 +22,12 @@
         <!-- <a href="index.html">
           <img src="./images/WebStudio.svg" alt="Лого вебстудии" />
         </a> -->
-        <a href="index.html" class="logo"
-          >Web<span class="logo-black">Studio</span></a
+        <a href="index.html" class="logo-top"
+          >Web<span class="logo-header">Studio</span></a
         >
         <ul class="site-nav list">
-          <li><a href="index.html" class="link current">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li><a href="index.html" class="link">Studio</a></li>
+          <li><a href="./portfolio.html" class="link current">Portfolio</a></li>
           <li><a href="#" class="link">Contacts</a></li>
         </ul>
       </nav>
@@ -75,8 +75,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Banking App Interface Concept</h2>
-              <p class="portfolio-text">App</p>
+              <h2 class="content-title">Banking App Interface Concept</h2>
+              <p class="section-text">App</p>
             </a>
           </li>
           <li>
@@ -87,8 +87,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Cashless Payment</h2>
-              <p class="portfolio-text">Marketing</p>
+              <h2 class="content-title">Cashless Payment</h2>
+              <p class="section-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -99,8 +99,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Meditaion App</h2>
-              <p class="portfolio-text">App</p>
+              <h2 class="content-title">Meditaion App</h2>
+              <p class="section-text">App</p>
             </a>
           </li>
           <li>
@@ -111,8 +111,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Taxi Service</h2>
-              <p class="portfolio-text">Marketing</p>
+              <h2 class="content-title">Taxi Service</h2>
+              <p class="section-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -123,8 +123,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Screen Illustrations</h2>
-              <p class="portfolio-text">Design</p>
+              <h2 class="content-title">Screen Illustrations</h2>
+              <p class="section-text">Design</p>
             </a>
           </li>
           <li>
@@ -135,8 +135,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Online Courses</h2>
-              <p class="portfolio-text">Marketing</p>
+              <h2 class="content-title">Online Courses</h2>
+              <p class="section-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -147,8 +147,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Instagram Stories Concept</h2>
-              <p class="portfolio-text">Design</p>
+              <h2 class="content-title">Instagram Stories Concept</h2>
+              <p class="section-text">Design</p>
             </a>
           </li>
           <li>
@@ -159,8 +159,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Organic Food</h2>
-              <p class="portfolio-text">Web Site</p>
+              <h2 class="content-title">Organic Food</h2>
+              <p class="section-text">Web Site</p>
             </a>
           </li>
           <li>
@@ -171,8 +171,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-title">Fresh Coffee</h2>
-              <p class="portfolio-text">Web Site</p>
+              <h2 class="content-title">Fresh Coffee</h2>
+              <p class="section-text">Web Site</p>
             </a>
           </li>
         </ul>
@@ -181,10 +181,10 @@
     <!-- Футер -->
     <footer class="footer">
       <!-- <img src="./images/WebStudio.svg" alt="Лого вебстудии" /> -->
-      <a href="index.html" class="logo"
-        >Web<span class="logo-white">Studio</span>
+      <a href="index.html" class="logo-bottom"
+        >Web<span class="logo-footer">Studio</span>
       </a>
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
