to fixed path to css file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     /> -->
     <title>Studio</title>
-    <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./сss/styles.css" />
   </head>
   <body class="page">
     <!-- Шапка сайту -->
