--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     /> -->
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./сss/styles.css" />
   </head>
   <body class="page">
     <!-- Шапка сайту -->
